Update gulp to support babelify.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -21,6 +21,6 @@
 
 		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
   
-    <script src="{{ url_for('static', filename='scripts/js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/js/build.js') }}"></script>
   </body>
 </html>
