--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -20,7 +20,8 @@
     <!-- TODO change to local -->
 
 		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-  
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r69/three.js"></script>
+   
     <script src="{{ url_for('static', filename='scripts/js/build.js') }}"></script>
   </body>
 </html>
